--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Tasks</string>
+    <string name="web_client_id">78902899940-epg3dan7i15tr695nruiovlft69esgne.apps.googleusercontent.com</string>
 </resources>
